--- a/number_place.html
+++ b/number_place.html
@@ -16,14 +16,7 @@
 	<div>
 		ナンプレ
 	</div>
-	<footer class="footer">
-		<div class="input-group mb-3">
-			<input type="text" class="form-control" placeholder="解答を入力", id="answer">
-			<div class="input-group-append">
-				<button class="btn btn-outline-secondary" type="button" id="answer_button" onClick="redirect_by_answer();">送信</button>
-			</div>
-		</div>
-	</footer>
-	<script src="functions.js" charset="utf-8"></script>
+	<footer id="footer"></footer>
+	<script src="main.js"></script>
 </body>
 </html>
