--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
-<div class="input-group mb-3">
-	<input type="text" class="form-control" placeholder="解答を入力", id="answer">
+<div class="input-group">
+	<input type="text" class="form-control" placeholder="呼びたい人の名前", id="answer">
 	<div class="input-group-append">
-		<button class="btn btn-outline-secondary" type="button" id="answer_button" onClick="redirect_by_answer();">送信</button>
+		<button class="btn btn-outline-secondary" type="button" id="answer_button" onClick="redirect_by_answer();">名前を呼ぶ</button>
 	</div>
 </div>
