--- a/index.html
+++ b/index.html
@@ -3,20 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>架空数</title>
+    <title>Alice in NoneBer Land</title>
     <meta name="description" content="解読x数字がテーマのWeb謎">
-    <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-	<div>
-		説明文
+<body style="padding-bottom: 0">
+	<div style="text-align: center; margin-top: 15vh;">
+		<h1 style="font-size: 64pt; border-bottom: solid 3px #95ccff;">Alice in NoneBer Land</h1>
+		<p style="font-size: 16pt;">作：くろねこ</p>
 	</div>
-	<footer id="footer"></footer>
-	<script src="main.js"></script>
+	<div id="rule" class="box26" style="margin-top: 50px;">
+		<span class="box-title">注意事項</span>
+		<ul>
+			<li>各パズルを解いた後、この画面から、そのパズルの後から物語を再開することが可能になります。</li>
+			<li>各パズル内での進捗（埋めた数字）の情報は保存されません。</li>
+			<li>コンピュータ・情報系の基礎知識が多少必要になります。</li>
+			<li>検索は自由にして構いません。</li>
+			<li>ソースコードの閲覧は禁止です。</li>
+			<li>どうぞお楽しみください。</li>
+		</ul>
+	</div>
+	<div style="text-align: center">
+	<button type="button" class="btn btn-outline-info submit-btn large-btn" style="text-align: center; margin-top: 30px;" onclick="location.href='story_alice.html'">
+		本を開く
+	</button>
+	</div>
+	<div style="margin-top: 20px; text-align: center;">
+		<ul class="chapter">
+			<li id="chapter1"><a href="story_tea_party_end.html">パズル1 クリア</a></li><li id="chapter2"><a href="story_escape_forest.html">パズル2 クリア</a></li><li id="chapter3"><a href="story_choice.html">パズル3 クリア</a></li>
+		</ul>
+	</div>
+	<div style="text-align:right; marge-top: 20pt; padding-right: 20pt;">
+		<p>もしよろしければ<a style="color: #95ccff;" href="https://forms.gle/k6LTUR94E5wdMEsR9">アンケート</a>にお答えください。</p>
+	</div>
+<script src="main.js"></script>
+<script>check_progress()</script>
 </body>
 </html>
