--- a/story_lewis.html
+++ b/story_lewis.html
@@ -5,16 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>架空数</title>
     <meta name="description" content="解読x数字がテーマのWeb謎">
-    <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<div>
-		ナンプレ
+	<header id="header"></header>
+	<div class="story">
+		<div class="story-title">
+			？？？
+		</div>
+		<div class="story-content">
+			<p>
+			「これは違うな。また最初から書き直しだ」
+			</p>
+		</div>
+	</div>
+	<div class="text-center">
+		<button type="button" class="btn btn-outline-info btn-submit" onclick="location.href='index.html'">
+			書き直す
+		</button>
 	</div>
 	<footer id="footer"></footer>
 	<script src="main.js"></script>
