delete footer from story

--- a/story_home.html
+++ b/story_home.html
@@ -29,11 +29,10 @@
 		</div>
 	</div>
 	<div class="text-center">
-		<button type="button" class="btn btn-outline-info btn-submit" onclick="location.href='story_lewis.html'">
+		<button type="button" class="btn btn-outline-info btn-submit" onclick="location.href='index.html'">
 			眠る
 		</button>
 	</div>
-	<footer id="footer"></footer>
 	<script src="main.js"></script>
 </body>
 </html>
