--- a/cross_rejected.html
+++ b/cross_rejected.html
@@ -132,6 +132,7 @@
 						<button type="button" class="btn btn-outline-info submit-btn large-btn" onclick="check_cross_rejected()">
 							Check
 						</button>
+						<a id="skip" href="story_choice.html">( Skip )</a>
 					</div>
 				</div>
 			</div>
@@ -142,5 +143,6 @@
 		<footer id="footer"></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<script src="main.js"></script>
+		<script>check_skip(3)</script>
 	</body>
 </html>
