--- a/minesweeper.html
+++ b/minesweeper.html
@@ -183,6 +183,7 @@
 							<button type="button" class="btn btn-outline-info submit-btn large-btn" onclick="check_mine()">
 								Check
 							</button>
+							<a id="skip" href="story_escape_forest.html">( Skip )</a>
 						</div>
 					</div>
 				</div>
@@ -193,5 +194,6 @@
 		<footer id="footer"></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<script src="main.js"></script>
+		<script>check_skip(2)</script>
 	</body>
 </html>
