--- a/nanpure.html
+++ b/nanpure.html
@@ -252,6 +252,7 @@
 							<button type="button" class="btn btn-outline-info submit-btn large-btn" onclick="check_nanpure()">
 								Check
 							</button>
+							<a id="skip" href="story_tea_party_end.html">( Skip )</a>
 						</div>
 					</div>
 				</div>
@@ -262,5 +263,6 @@
 		<footer id="footer"></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<script src="main.js"></script>
+		<script>check_skip(1)</script>
 	</body>
 </html>
