--- a/cross_rejected.html
+++ b/cross_rejected.html
@@ -22,9 +22,8 @@
 						<div id="rule" class="box26">
 							<span class="box-title">ルール</span>
 							<ul>
-								<li>盤面の数字は、そのマスの周囲8マスに存在する黒マスの数を表しています。</li>
-								<li>空白のマスに数字をいれる、もしくは黒マスにして、盤面を完成させましょう。</li>
-								<li>候補にある数字は、全て盤面に出てくるようにしてください。</li>
+								<li>マスに数字を入れて、盤面を完成させてください。</li>
+								<li>鍵は、盤面で出現する数を表しています。</li>
 							</ul>
 						</div>
 					</div>
