--- a/story_home.html
+++ b/story_home.html
@@ -30,7 +30,7 @@
 	</div>
 	<div class="text-center">
 		<button type="button" class="btn btn-outline-info btn-submit" onclick="location.href='index.html'">
-			眠る
+			本を閉じる
 		</button>
 	</div>
 	<script src="main.js"></script>
