--- a/story_choice.html
+++ b/story_choice.html
@@ -30,13 +30,13 @@
 			でもその中に、黒い猫が一匹。
 			</p>
 			<p>
-			「はじめまして、アリス。ぼくはこの世界を作った神さま。さっきのパズルはごめんね？出すの間違ってたよ」
+			「クリアおめでとう、アリス。ぼくはこの世界を作った神さま。さっきのパズルはごめんね？出すの間違ってたよ」
 			</p>
 			<p>
 			　神さまだという黒猫は、まったく悪びれもせずにアリスに話しかけます。
 			</p>
 			<p>
-			「はじめまして、神さまさん。もしかして神さまが私を？」
+			「はじめまして、えーと、神さまさん？もしかして神さまが私を？」
 			</p>
 			<p>
 			「うん、そうだよ。神さまってひまなんだよ。何もすることがないんだもん。あのうさぎに頼んできみをつれてきてもらったんだ。ぼくの世界を楽しんでくれそうな、きみをね」
