--- a/cross_use.html
+++ b/cross_use.html
@@ -65,11 +65,11 @@
 						<div class="box26 mt-5">
 							<h5 class="box-title" style="text-align: center">鍵</h5>
 							<ul>
-								<li>これ以外の鍵の合計</li>
-								<li>long double型で表現できる最大値：〜e＋<span style="font-weight: bold">？</span></li>
+								<li>これ以外の鍵の合計+<img class="in-text" src="images/FTKTbcjU_dSd4ELT.png"></img></li>
+								<li>long double型で表現できる最大値：〜e＋<span style="font-weight: bold">？</span>(<img class="in-text" src="images/PauEnBcbXDSy-3GF.png"></img>桁)</li>
 								<li>Alice <span style="color: blue">B</span>lue</li>
 								<li>Through the Looking-Glass,<br>and What Alice Found There</li>
-								<li><img class="in-text" src="images/FTKTbcjU_dSd4ELT.png"></img><img class="in-text" src="images/BBfmTKNrc45DYPcw.png"></img>番目の素数</li>
+								<li><img class="in-text" src="images/FTKTbcjU_dSd4ELT.png"></img><img class="in-text" src="images/xBu3tDpGjjhjR27B.png"></img>番目の素数</li>
 								<li>短歌の文字数</li>
 								<li><img class="in-text" src="images/FTKTbcjU_dSd4ELT.png"></img>桁の自然数のうち、最大の数</li>
 							</ul>
