--- a/cross_use.html
+++ b/cross_use.html
@@ -24,6 +24,7 @@
 							<ul>
 								<li>マスに数字を入れて、盤面を完成させてください。</li>
 								<li>鍵は、盤面で出現する数を表しています。</li>
+								<li>数字は、左から右、もしくは上から下の順に並びます。</li>
 							</ul>
 						</div>
 					</div>
