change start button to image

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 			<li>どうぞお楽しみください。</li>
 		</ul>
 	</div>
-	<div style="text-align: center">
-	<button type="button" class="btn btn-outline-info submit-btn large-btn" style="text-align: center; margin-top: 30px;" onclick="location.href='story_alice.html'">
+	<div style="text-align: center; margin: 20px">
+	<!-- <button type="button" class="btn btn-outline-info submit-btn large-btn" style="text-align: center; margin-top: 30px;" onclick="location.href='story_alice.html'">
 		本を開く
 	</button>
+	-->
+	<a href="story_alice.html"><img src="images/play_me.png" alt="PLAY ME" height="100px"></a>
 	</div>
 	<div style="margin-top: 20px; text-align: center;">
 		<ul class="chapter">
