--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body style="padding-bottom: 0">
 	<div style="text-align: center; margin-top: 15vh;">
 		<h1 id="book-title" style="font-size: 64pt; border-bottom: solid 3px #95ccff;">Alice in NoneBer Land</h1>
-		<p style="font-size: 16pt;">作：くろねこ</p>
+		<p id="author" style="font-size: 16pt;">作：くろねこ</p>
 	</div>
 	<div id="rule" class="box26" style="margin-top: 50px;">
 		<span class="box-title">注意事項</span>
