--- a/cross_use.html
+++ b/cross_use.html
@@ -71,7 +71,7 @@
 							<h5 class="box-title" style="text-align: center">鍵</h5>
 							<ul>
 								<li>これ以外の鍵の合計+<img class="in-text" src="images/FTKTbcjU_dSd4ELT.png"></img></li>
-								<li>long double型で表現できる最大値：〜e＋<span style="font-weight: bold">？</span>(<img class="in-text" src="images/PauEnBcbXDSy-3GF.png"></img>桁)</li>
+								<li>binary<img class="in-text" src="images/7tH3ba-e74zEbr2B.png"><img class="in-text" src="images/BBfmTKNrc45DYPcw.png">で表現できる最大値：〜E＋<b>？</b></li>
 								<li>Alice <span style="color: blue">B</span>lue</li>
 								<li>Through the Looking-Glass,<br>and What Alice Found There</li>
 								<li><img class="in-text" src="images/FTKTbcjU_dSd4ELT.png"></img><img class="in-text" src="images/xBu3tDpGjjhjR27B.png"></img>番目の素数</li>
