--- a/minesweeper.html
+++ b/minesweeper.html
@@ -27,7 +27,7 @@
 							<span class="box-title">ルール</span>
 							<ul>
 								<li>盤面の数字は、そのマスに隣接する黒マスの数（斜めも含む）を表しています。</li>
-								<li>空白のマスに数字をいれる、もしくは黒マスにして、盤面を完成させましょう。</li>
+								<li>空白のマスに数字をいれる、もしくは空白を黒マスにして、盤面を完成させましょう。</li>
 								<li>候補にある数字は、全て盤面に出てくるようにしてください。</li>
 								<li>フラグは自由にお使いください。答えには関係しません。</li>
 							</ul>
