--- a/nanpure.html
+++ b/nanpure.html
@@ -208,7 +208,7 @@
 						</table>
 					</div>
 
-					<div class="col-md-5 kouho_space">
+					<div class="col-md-5 kouho_space nanpure_kouho">
 						<div class="float-md-first mt-3 mt-md-5 ml-md-3">
 							<table id="kouho" class="float-md-first">
 								<h4 style="text-align: left;">候補</h4>
@@ -222,31 +222,31 @@
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/fdrDDa-R-WTFpdtJ.png" width=30 height=30>
 									</td>
+								</tr>
+								<tr>
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/FTKTbcjU_dSd4ELT.png" width=30 height=30>
 									</td>
-								</tr>
-								<tr>
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/kxjuTJf3xAAe5yTf.png" width=30 height=30>
 									</td>
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/mi2TKWYM_FGuYfWz.png" width=30 height=30>
 									</td>
+								</tr>
+								<tr>
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/mZjUp8tYWs6fHWae.png" width=30 height=30>
 									</td>
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/PauEnBcbXDSy-3GF.png" width=30 height=30>
 									</td>
-								</tr>
-								<tr>
 									<td class="kouho_masu" onclick="select_kouho(event)">
 										<img src="images/xBu3tDpGjjhjR27B.png" width=30 height=30>
 									</td>
 								</tr>
 							</table>
-							<button id="clear_masu" class="btn btn-outline-info submit-btn small-btn rounded-pill" onclick="select_kouho(event)">数字をクリア</button>
+							<button id="clear_masu" class="btn btn-outline-info submit-btn small-btn rounded-pill" onclick="select_kouho(event)" style="margin-left: 15px">数字をクリア</button>
 						</div>
 					</div>
 				</div>
