--- a/story_choice.html
+++ b/story_choice.html
@@ -34,7 +34,7 @@
 			でもその中に、黒い猫が一匹。
 			</p>
 			<p>
-			「クリアおめでとう、アリス。ぼくはこの世界を作った神さま。さっきのパズルはごめんね？出すの間違ってたよ」
+			「クリアおめでとう、アリス。ぼくはこの世界を作った神さま。さっきのパズルはごめんね？出すのを間違ってたよ」
 			</p>
 			<p>
 			　神さまだという黒猫は、まったく悪びれもせずにアリスに話しかけます。
