--- a/story_escape_forest.html
+++ b/story_escape_forest.html
@@ -63,7 +63,11 @@
 			　アリスは、手を振ると白うさぎを見つけるために先へすすんで行きます。
 			</p>
 			<p>
-			「でも、まだわかった数字は半分くらいね。またパズルを出されても分かるかしら」
+			「これで数字は全部わかったわね！どんなパズルでもかかってきなさい！」
+			</p>　<p>
+			</p>
+			<p>
+			　三日月のような笑みを浮かべる猫には、やっぱり気づいていないようです。
 			</p>
 
 		</div>
