--- a/story_forest.html
+++ b/story_forest.html
@@ -50,10 +50,10 @@
 			　上を見上げると、口が大きく広がった猫が木の枝に座っていました。
 			</p>
 			<p>
-			「あなたはだれ？あのうさぎを知っているの？」
+			「あなたはだあれ？あのうさぎを知っているの？」
 			</p>
 			<p>
-			「オレはチェシャ猫。知ってるとも言えるし、知らないとも言える。だいじなのは、うさぎがどっちに行ったのかを知っている、ということだ」
+			「オレはチェシャ猫。知っているとも言えるし、知らないとも言える。だいじなのは、うさぎがどっちに行ったのかを知っている、ということだ」
 			</p>
 			<p>
 			　アリスは、たしかにその通りだと思いました。
