--- a/story_kuroneko.html
+++ b/story_kuroneko.html
@@ -17,7 +17,7 @@
 </head>
 
 <body style="background-color: white; color: black">
-	<div class='kuroneko'>
+	<div class='kuroneko' style='margin-top: 100px'>
 		<p>
 		ぼくを受け入れてありがとう。
 		</p>
@@ -90,25 +90,29 @@
 		<p>
 		でも、
 		</p>
-	</div>
-	<div class='kuroneko' style='font-size: 32pt; min-height: 0'>
+		<br>
 		<p>
-		全部の記憶を消すよ。
+		それなら...
+		</p>
+	</div>
+	<div class='kuroneko' style='min-height: 0; margin-bottom: 50px'>
+		<p>
+		全部をリセットするよ。
 		</p>
 		<p>
-		きみの記憶ももちろん、
+		解いてきたパズルも、きみの記憶も、みんなの記憶も。
 		</p>
 		<p>
 		ぼくの記憶も。
 		</p>
 		<p>　</p>
 		<p>
-		それでもいいなら、リセットすればいいよ。
+		そしたらまた、遊べるよね？
 		</p>
 	</div>
 	<div class="text-center">
-		<button type="button" class="" style="font-size: 20pt;" onclick="reset_story()">
-			リセットする
+		<button type="button" onclick="reset_story()">
+			リセット
 		</button>
 	</div>
 
