--- a/story_rabbit.html
+++ b/story_rabbit.html
@@ -26,7 +26,7 @@
 			<p>
 			　アリスがチェシャ猫の示した道を歩くと、おどろくほど簡単に森を抜けることができました。
 			そして次に広がったのは、美しい庭。
-			いろとりどりのお花が植えられて、蝶がひらひらと舞っています。
+			いろとりどりのお花が植えられいて、蝶がひらひらと舞っています。
 			</p>
 			<p>
 			　そんな中、あの白うさぎがせわしなく花に水をあげているのを見つけました。
