--- a/story_tea_party.html
+++ b/story_tea_party.html
@@ -74,7 +74,7 @@
 				「そしたら、このパズル解いてよ。あいつらに出されたけど、解けなくてふて寝してたのさ」
 			</p>
 			<p>
-				　ずっと怒られててうんざりしていたアリスは、とつぜん出てきたパズルという単語に興奮しました。
+				　ずっと怒られていてうんざりしていたアリスは、とつぜん出てきたパズルという単語に興奮しました。
 			</p>
 			<p>
 				「パズル！もちろんよ！さあ、早く見せてちょうだい！」
